# tardis

./: Cargo.toml  LICENSE  README.md  config.toml
.cargo/: config.toml
docker/: Dockerfile  docker-compose.yml
libtardis/: Cargo.toml
libtardis/src/: crypto.rs  error.rs  lib.rs  serialization.rs
libtardis/src/syscall/: linux_syscall.rs  mod.rs
loader/: Cargo.toml  build.rs
loader/src/: main.rs
mitigations/: README.md  audit.rules  tardis.bt
tardis/: Cargo.toml  build.rs
tardis/src/: main.rs
